--- a/Seminars/Seminar 04_HW/index.html
+++ b/Seminars/Seminar 04_HW/index.html
@@ -19,7 +19,7 @@
                     <a class="menu__link--3" href="#">Home</a>
                     <a class="menu__link" href="#">About Us</a>
                     <a class="menu__link" href="#">Services</a>
-                    <a class="menu__link" href="#">Features</a>
+                    <a class="menu__link" href="#">Features <img src="./img/arrow_state_grey_expanded_7910.png" alt=""></a>
                     <a class="menu__link" href="#">Team</a>
                     <a class="menu__link" href="#">Team</a>
                     <a class="menu__link" href="#">Contact</a>
